@@ -1,3 +1,8 @@
+2008-11-02  Janne Jalkanen <jalkanen@apache.org>
+
+        * Merged changes from 2.8 branch: JSPWIKI-288, JSPWIKI-406,
+		JSPWIKI-348, JSPWIKI-389, JSPWIKI-138
+
 2008-10-26  Janne Jalkanen <jalkanen@apache.org>
 
         * Added the 3.0 API definition interfaces from the SVN.
